Fixed filter panel on mobile

--- a/src/sass/components/ui/filterPanel.scss
+++ b/src/sass/components/ui/filterPanel.scss
@@ -2,6 +2,7 @@
     display: flex ;
     flex-direction: column ;
     height: 100% ;
+    position: relative ;
 
     &__header {
         display: flex ;
@@ -11,15 +12,24 @@
         padding: 0 1rem ;
         height: 7rem ;
 
-        &>button {
-            margin-left: auto ;
+        &__title {
+            margin-right: auto ;
         }
+
+        &__close-btn {
+            display: none ;
+            @include respond(tabLand) {
+                display: block;
+            }
+        }
+
     }
 
     &__body {
         flex: 1 ;
         height: 100% ;
         overflow-y: auto ;
+        padding-bottom: 10rem ;
         
         -ms-overflow-style: none; /* Internet Explorer 10+ */
         scrollbar-width: none; /* Firefox */
@@ -87,6 +97,16 @@
             &:hover {
                 color: $color-neutral-700 ;
             }
+        }
+    }
+
+    &__fab {
+        position: absolute ;
+        bottom: 2.4rem ;
+        left: 50% ;
+        transform: translateX(-50%);
+        &>button {
+            box-shadow: $shadow-lg , $shadow-sm;
         }
     }
 }
