--- a/src/sass/pages/explore.scss
+++ b/src/sass/pages/explore.scss
@@ -27,6 +27,10 @@
 					margin-left: calc(var(--size) * -1) ;
 				}
 			}
+
+			@include respond(phone){
+				--size:100vw;
+			}
 		}
 
 		&__books {
